erDiagram
    %% ━━━ 권한/메뉴 관련 ━━━
    qp_roles {
        int id PK
        varchar role_code UK
        varchar role_name
        varchar description
        boolean is_active
        boolean is_system
        datetime created_at
        varchar created_by
        datetime updated_at
        varchar updated_by
    }

    qp_role_menu_permissions {
        varchar role_code PK_FK
        varchar menu_code PK_FK
        boolean can_read
        boolean can_create
        boolean can_update
        boolean can_delete
        datetime created_at
        varchar created_by
        datetime updated_at
        varchar updated_by
    }

    qp_menus {
        int id PK
        int parent_id FK
        varchar menu_code UK
        varchar menu_name
        varchar page_url
        boolean is_active
        boolean show_in_top_nav
        boolean show_in_mobile
        int sort_order
        datetime created_at
        varchar created_by
        datetime updated_at
        varchar updated_by
    }

    qp_code_headers {
        int id PK
        varchar header_code UK
        varchar header_alias
        varchar header_name
        varchar rel_code1
        varchar rel_code2
        varchar rel_code3
        decimal rel_num1
        decimal rel_num2
        decimal rel_num3
        boolean is_active
        datetime created_at
        varchar created_by
        datetime updated_at
        varchar updated_by
    }

    qp_code_details {
        int id PK
        int header_id FK
        varchar code
        varchar display_code
        varchar code_name
        varchar code_name_etc
        varchar rel_code1
        varchar rel_code2
        varchar rel_code3
        decimal rel_num1
        int sort_order
        boolean is_active
        datetime created_at
        varchar created_by
        datetime updated_at
        varchar updated_by
    }

    %% ━━━ 콘텐츠 관련 ━━━
    qp_contents {
        int id PK
        enum user_type
        varchar user_id
        varchar author_department
        tinyint approver_level
        varchar title
        mediumtext body
        enum status
        datetime published_at
        int view_count
        datetime created_at
        varchar created_by
        datetime updated_at
        varchar updated_by
    }

    qp_content_targets {
        int id PK
        int content_id FK
        varchar role_code FK
        datetime start_at
        datetime end_at
        datetime created_at
        varchar created_by
        datetime updated_at
        varchar updated_by
    }

    qp_categories {
        int id PK
        int parent_id FK
        varchar category_code UK
        varchar name
        boolean is_internal_only
        int sort_order
        boolean is_active
        datetime created_at
        varchar created_by
        datetime updated_at
        varchar updated_by
    }

    qp_content_categories {
        int content_id PK_FK
        int category_id PK_FK
        datetime created_at
        varchar created_by
    }

    qp_content_attachments {
        int id PK
        int content_id FK
        varchar file_name
        varchar file_path
        bigint file_size
        varchar mime_type
        int sort_order
        datetime created_at
        varchar created_by
        datetime updated_at
        varchar updated_by
    }

    qp_content_inline_images {
        int id PK
        int content_id FK
        enum owner_type
        varchar owner_user_id
        varchar file_name
        varchar file_path
        bigint file_size
        varchar mime_type
        datetime created_at
    }

    %% ━━━ 인증 관련 ━━━
    qp_password_reset_tokens {
        int id PK
        enum user_type
        varchar user_id
        varchar login_id
        varchar token UK
        datetime expires_at
        boolean used
        datetime created_at
        varchar created_by
    }

    qp_two_factor_codes {
        int id PK
        enum user_type
        varchar user_id
        varchar code
        datetime expires_at
        boolean verified
        datetime verified_at
        int attempts
        datetime created_at
        varchar created_by
    }

    %% ━━━ 홈공지 / 대량메일 ━━━
    qp_home_notices {
        int id PK
        enum user_type
        varchar user_id
        datetime start_at
        datetime end_at
        varchar title
        text content
        varchar url
        datetime created_at
        varchar created_by
        datetime updated_at
        varchar updated_by
    }

    qp_home_notice_targets {
        int id PK
        int home_notice_id FK
        varchar role_code FK
    }

    qp_mass_mails {
        int id PK
        enum user_type
        varchar user_id
        varchar sender_name
        varchar subject
        mediumtext body
        enum status
        datetime sent_at
        int sent_total
        int sent_success
        int sent_failed
        boolean opt_out
        datetime created_at
        varchar created_by
        varchar created_by_name
        datetime updated_at
        varchar updated_by
    }

    qp_mass_mail_targets {
        int id PK
        int mass_mail_id FK
        varchar role_code FK
    }

    qp_mass_mail_attachments {
        int id PK
        int mass_mail_id FK
        varchar file_name
        varchar file_path
        bigint file_size
        datetime created_at
        varchar created_by
        datetime updated_at
        varchar updated_by
    }

    qp_mass_mail_recipients {
        int id PK
        int mass_mail_id FK
        varchar email
        varchar user_name
        varchar auth_role_code
        enum status
        datetime sent_at
        varchar error_message
        int retry_count
        datetime created_at
        varchar created_by
    }

    %% ━━━ 로그 / 문의 / 외부 I/F ━━━
    qp_download_logs {
        int id PK
        enum user_type
        varchar user_id
        int content_id FK
        int attachment_id FK
        datetime downloaded_at
    }

    qp_inquiries {
        int id PK
        enum user_type
        varchar user_id
        varchar company_name
        varchar user_name
        varchar tel
        varchar email
        varchar inquiry_type
        varchar title
        text content
        datetime created_at
        varchar created_by
    }

    qp_interface_log {
        int id PK
        varchar trace_id
        varchar system
        varchar direction
        varchar api_name
        varchar method
        varchar request_url
        text request_body
        int response_status
        text response_body
        varchar result_code
        int duration_ms
        varchar caller_route
        varchar user_id
        varchar user_type
        varchar error_message
        datetime created_at
        varchar created_by
    }

    %% ━━━ 관계 ━━━
    qp_roles ||--o{ qp_role_menu_permissions : "has"
    qp_roles ||--o{ qp_content_targets : "has"
    qp_roles ||--o{ qp_home_notice_targets : "has"
    qp_roles ||--o{ qp_mass_mail_targets : "has"
    qp_menus ||--o{ qp_role_menu_permissions : "has"
    qp_menus ||--o{ qp_menus : "parent"
    qp_code_headers ||--o{ qp_code_details : "has"
    qp_contents ||--o{ qp_content_targets : "has"
    qp_contents ||--o{ qp_content_categories : "has"
    qp_contents ||--o{ qp_content_attachments : "has"
    qp_contents ||--o{ qp_content_inline_images : "has"
    qp_contents ||--o{ qp_download_logs : "has"
    qp_content_attachments ||--o{ qp_download_logs : "has"
    qp_categories ||--o{ qp_content_categories : "has"
    qp_categories ||--o{ qp_categories : "parent"
    qp_home_notices ||--o{ qp_home_notice_targets : "has"
    qp_mass_mails ||--o{ qp_mass_mail_targets : "has"
    qp_mass_mails ||--o{ qp_mass_mail_attachments : "has"
    qp_mass_mails ||--o{ qp_mass_mail_recipients : "has"
